# cpp_for_qa_home_work

./: CMakeLists.txt  Doxyfile.in  main.cpp  readme.md  square.cpp  test_square.cpp
.github/workflows/: test.yaml
include/: square.h
include/signal_processing/: strategy_engine.hpp
src/signal_processing/: strategy_engine.cpp
